istioStudy/trafficManagement/istioIngress/example.gateway-mutual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
       number: 80
       name: http-all
       protocol: HTTP
      hosts:
      - "flaskapp.microservice.rocks"
      - "flaskapp.microservice.xyz"
    - port:
       number: 443
       name: https-flaskapp-rocks
       protocol: HTTPS
      tls:
       mode: MUTUAL
       serverCertificate: /etc/istio/ingressgateway-certs/flaskapp.microservice.rocks.crt
       privateKey: /etc/istio/ingressgateway-certs/flaskapp.microservice.rocks.key
       caCertificates: /etc/istio/ingressgateway-ca-certs/ca.crt
      hosts:
      - "flaskapp.microservice.rocks"
    - port:
       number: 443
       name: https-flaskapp-xyz
       protocol: HTTPS
      tls:
       mode: MUTUAL
       serverCertificate: /etc/istio/ingressgateway-certs/flaskapp.microservice.xyz.crt
       privateKey: /etc/istio/ingressgateway-certs/flaskapp.microservice.xyz.key
       caCertificates: /etc/istio/ingressgateway-ca-certs/ca.crt
      hosts:
      - "flaskapp.microservice.xyz"
