istioStudy/trafficManagement/istioIngress/example.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
       number: 80
       name: http-all
       protocol: HTTP
      hosts:
      - "flaskapp.microservice.rocks"
      - "flaskapp.microservice.xyz"
    - port:
       number: 443
       name: https-rocks
       protocol: HTTPS
      tls:
       mode: SIMPLE
       serverCertificate: /etc/istio/ingressgateway-certs/rocks-cert.pem
       privateKey: /etc/istio/ingressgateway-certs/rocks-key.pem
      hosts:
      - "flaskapp.microservice.rocks"
    - port:
       number: 443
       name: https-xyz
       protocol: HTTPS
      tls:
       mode: SIMPLE
       serverCertificate: /etc/istio/ingressgateway-certs/xyz-cert.pem
       privateKey: /etc/istio/ingressgateway-certs/xyz-key.pem
      hosts:
      - "flaskapp.microservice.xyz"
